Company add / edit / delete

--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/_Imports.razor
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/_Imports.razor
@@ -8,3 +8,14 @@
 @using Microsoft.JSInterop
 @using MicroServices.CompanyService.BlazorServerSide
 @using MicroServices.CompanyService.BlazorServerSide.Shared
+
+@* Backend link *@
+@using MediatR
+
+@* Translations *@
+@using MicroServices.CompanyService.BlazorServerSide.Translations
+
+@* Blazorise components *@
+@using Blazorise.DataGrid
+@using Blazorise.Components
+@using Blazorise.Snackbar
