--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/_Host.cshtml
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/_Host.cshtml
@@ -4,5 +4,5 @@
 @{
     Layout = "_Layout";
 }
-
+<link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
 <component type="typeof(App)" render-mode="ServerPrerendered" />
