--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/_Layout.cshtml
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/_Layout.cshtml
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="MicroServices.CompanyService.BlazorServerSide.styles.css" rel="stylesheet" />
+    
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
