Basic company management UI

--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/Companies.razor
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/Pages/Companies.razor
@@ -1,16 +1,18 @@
 ﻿@page "/company"
-
+@using Blazorise
 <PageTitle>Company Management</PageTitle>
 
 @using MicroServices.CompanyService.BLL.Models
 @using MicroServices.CompanyService.BLL.Queries.GetCompanies
-@using Blazorise
+
 @using MicroServices.CompanyService.BLL.Commands.AddCompany
 @using MicroServices.CompanyService.BLL.Commands.DeleteCompany
 @using MicroServices.CompanyService.BLL.Commands.EditCompany
-@using Microsoft.VisualBasic
+
 
 @inject IMediator _mediator
+@inject IMessageService _messageService
+@inject NavigationManager _navigation
 
 
 <h1>Company Management</h1>
@@ -26,25 +28,60 @@ else
         TItem="Company"
         Data="@_companies"
         @bind-SelectedRow="@_selectedCompany"
-        Responsive 
-        Filterable="true"
+        Responsive Filterable="true"
         ShowPager="true"
         Editable
-        EditMode="DataGridEditMode.Inline"
+        Resizable
+        ResizeMode="TableResizeMode.Columns"
+        EditMode="DataGridEditMode.Popup"
         FilteredDataChanged="FilteredDataChanged"
         RowUpdated="RowUpdateCallBack"
         RowInserted="RowInsertedCallBack"
         RowRemoved="RowRemovedCallBack"
+        RowRemoving="RowRemovingCallBack"
         
-        >
-        <DataGridCommandColumn TItem="Company">
+    >  
+        <PopupTitleTemplate>
+            Companies.....
+        </PopupTitleTemplate>
+        <DataGridColumns>
+            <DataGridColumn TItem="Company" Field="@nameof(Company.Name)" Caption="@CompanyTranslations.CompanyName" Editable="true"/>
+            <DataGridColumn TItem="Company" Field="@nameof(Company.VatNumber)" Caption="@CompanyTranslations.VatNumber" Editable="true"></DataGridColumn>
+            <DataGridColumn TItem="Company" Field="@nameof(Company.PhoneNumber)" Caption="@CompanyTranslations.PhoneNumber" Editable="true"></DataGridColumn>
+            <DataGridColumn TItem="Company" Field="@nameof(Company.Building)" Caption="@CompanyTranslations.Building" Editable="true"></DataGridColumn>
+            <DataGridColumn TItem="Company" Field="@nameof(Company.Floor)" Caption="@CompanyTranslations.Floor" Editable="true"></DataGridColumn>
+            <DataGridColumn TItem="Company" Filterable="false" Sortable="false" Editable="false" >
+                <DisplayTemplate>
+                    <Button Color="Color.Info" class="float-end" @onclick="() => NavigateToDetails(context.Id)" >Details</Button>
+                </DisplayTemplate>
+            </DataGridColumn>
+            <DataGridCommandColumn TItem="Company">
+                
+                <NewCommandTemplate>
+                    <Button Color="Color.Success" Clicked="@context.Clicked">New</Button>
+                </NewCommandTemplate>
+                <EditCommandTemplate>
+                    <Button Color="Color.Primary" Clicked="@context.Clicked">Edit</Button>
+                </EditCommandTemplate>
+                <DeleteCommandTemplate>
+                    <Button Color="Color.Danger" Clicked="@context.Clicked">Delete</Button>
+                </DeleteCommandTemplate>
+                <SaveCommandTemplate>
+                    <Button Color="Color.Success" Clicked="@context.Clicked">Save</Button>
+                </SaveCommandTemplate>
+                <CancelCommandTemplate>
+                    <Button Color="Color.Danger" Clicked="@context.Clicked">Cancel</Button>
+                </CancelCommandTemplate>
+                <ClearFilterCommandTemplate>
+                    <Button Color="Color.Secondary" Clicked="@context.Clicked">Clear</Button>
+                </ClearFilterCommandTemplate>
+            </DataGridCommandColumn>
+        </DataGridColumns>
 
-        </DataGridCommandColumn>
-        <DataGridColumn TItem="Company" Field="@nameof(Company.Name)" Caption="@CompanyTranslations.CompanyName" Editable="true"/>
-        <DataGridColumn TItem="Company" Field="@nameof(Company.VatNumber)" Caption="@CompanyTranslations.VatNumber" Editable="true"></DataGridColumn>
-        <DataGridColumn TItem="Company" Field="@nameof(Company.PhoneNumber)" Caption="@CompanyTranslations.PhoneNumber" Editable="true"></DataGridColumn>
-        <DataGridColumn TItem="Company" Field="@nameof(Company.Building)" Caption="@CompanyTranslations.Building" Editable="true"></DataGridColumn>
-        <DataGridColumn TItem="Company" Field="@nameof(Company.Floor)" Caption="@CompanyTranslations.Floor" Editable="true"></DataGridColumn>
+        @*<ButtonRowTemplate>
+            <Button Color="Color.Success" Clicked="@context.NewCommand.Clicked">New</Button>
+            <Button Color="Color.Primary" Clicked="@context.EditCommand.Clicked" Disabled="@(_selectedCompany == null)">Edit</Button>
+        </ButtonRowTemplate>*@
     </DataGrid>
 
 
@@ -62,6 +99,7 @@ else
     private Company? _selectedCompany;
     private Snackbar _feedback;
 
+
     protected override async Task OnInitializedAsync()
     {
         _companies = await _mediator.Send(new GetCompaniesQuery());
@@ -70,6 +108,11 @@ else
 
     private void FilteredDataChanged(DataGridFilteredDataEventArgs<Company> obj)
     {
+    }
+
+    private void NavigateToDetails(int id)
+    {
+        _navigation.NavigateTo($"/company/{id}");
     }
 
     private async Task RowUpdateCallBack(SavedRowItem<Company, Dictionary<string, object>> obj)
@@ -100,9 +143,12 @@ else
             PhoneNumber = company.PhoneNumber,
             VatNumber = company.VatNumber
         };
-        await _mediator.Send(command);
+        var result =  await _mediator.Send(command);
+        company.Id = result.Id;
         await _feedback.Show();
     }
+
+
 
     private async Task RowRemovedCallBack(Company obj)
     {
@@ -113,4 +159,11 @@ else
         await _mediator.Send(command);
     }
 
+    private async Task RowRemovingCallBack(CancellableRowChange<Company> obj)
+    {
+        var response = await _messageService.Confirm($"Please confirm the deletion of company '{obj.Item.Name}'");
+        obj.Cancel = !response;
+    }
+
+    
 }
