--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/_Imports.razor
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/_Imports.razor
@@ -16,6 +16,7 @@
 @using MicroServices.CompanyService.BlazorServerSide.Translations
 
 @* Blazorise components *@
+@using Blazorise
 @using Blazorise.DataGrid
 @using Blazorise.Components
 @using Blazorise.Snackbar
