--- a/MicroServices/MicroServices.CompanyService.BlazorServerSide/Shared/NavMenu.razor
+++ b/MicroServices/MicroServices.CompanyService.BlazorServerSide/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">MicroServices.CompanyService.BlazorServerSide</a>
+        <a class="navbar-brand" href="">My Building</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
